<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_login" android:title="@string/action_login"
        android:orderInCategory="110" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_userinfo" android:title="@string/action_userinfo"
        android:orderInCategory="120" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_folderenum" android:title="FolderEnum"
        android:orderInCategory="130" app:showAsAction="always" />
</menu>
