<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FolderEnumActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout" android:title="@string/action_logout"
        app:showAsAction="withText|always" />
    <item android:id="@+id/action_userinfo" android:title="@string/action_userinfo"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_uploadfile" android:title="Upload"
        app:showAsAction="always" />
    <!--<item android:id="@+id/action_up" android:title="Up"-->
        <!--app:showAsAction="always" />-->
</menu>
